// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. single inline element 1`] = `
<View>
  <Text
    allowFontScaling={false}
    testID="author"
  >
    <Text
      allowFontScaling={false}
    >
      Lindsay McIntosh, Scottish Political Editor
    </Text>
  </Text>
</View>
`;

exports[`2. with the author in the beginning 1`] = `
<View>
  <Text
    allowFontScaling={false}
    testID="author"
  >
    <Text
      allowFontScaling={false}
    >
      Camilla Long
    </Text>
    <Text
      allowFontScaling={false}
    >
      , Environment Editor
    </Text>
  </Text>
</View>
`;

exports[`3. with the author at the end 1`] = `
<View>
  <Text
    allowFontScaling={false}
    testID="author"
  >
    <Text
      allowFontScaling={false}
    >
      RBS Six Nations, 
    </Text>
    <Text
      allowFontScaling={false}
    >
      Mike Atherton
    </Text>
  </Text>
</View>
`;

exports[`4. with multiple authors separated by a pipe 1`] = `
<View>
  <Text
    allowFontScaling={false}
    testID="author"
  >
    <Text
      allowFontScaling={false}
    >
      Camilla Long
    </Text>
    <Text
      allowFontScaling={false}
    >
       | 
    </Text>
    <Text
      allowFontScaling={false}
    >
      Mike Atherton
    </Text>
    <Text
      allowFontScaling={false}
    >
       | 
    </Text>
    <Text
      allowFontScaling={false}
    >
      Alexandra Frean
    </Text>
  </Text>
</View>
`;

exports[`5. with multiple authors separated by text with commas 1`] = `
<View>
  <Text
    allowFontScaling={false}
    testID="author"
  >
    <Text
      allowFontScaling={false}
    >
      Camilla Long
    </Text>
    <Text
      allowFontScaling={false}
    >
      , 
    </Text>
    <Text
      allowFontScaling={false}
    >
      Mike Atherton
    </Text>
    <Text
      allowFontScaling={false}
    >
      , 
    </Text>
    <Text
      allowFontScaling={false}
    >
      Alexandra Frean
    </Text>
  </Text>
</View>
`;

exports[`6. with multiple authors separated by spaces 1`] = `
<View>
  <Text
    allowFontScaling={false}
    testID="author"
  >
    <Text
      allowFontScaling={false}
    >
      Camilla Long
    </Text>
    <Text
      allowFontScaling={false}
    >
       
    </Text>
    <Text
      allowFontScaling={false}
    >
      Mike Atherton
    </Text>
    <Text
      allowFontScaling={false}
    >
      Alexandra Frean
    </Text>
  </Text>
</View>
`;

exports[`7. null with an empty ast 1`] = `
<Text
  allowFontScaling={false}
  testID="author"
/>
`;
